# single-algebra

./: .gitignore  Cargo.toml  LICENSE.md  README.md
benches/: csc_matrix_benchmark.rs  csr_matrix_benchmark.rs
src/: lib.rs
src/clustering/: mod.rs  similarity_network.rs
src/clustering/leiden/: mod.rs
src/clustering/louvain/: mod.rs
src/correction/: mod.rs
src/dense/: mod.rs
src/dimred/: mod.rs
src/dimred/pca/: mod.rs
src/dimred/pca/dense/: mod.rs
src/dimred/pca/sparse/: mod.rs
src/dimred/pca/sparse_masked/: mod.rs
src/dimred/tsne/: mod.rs
src/local_moving/: fast.rs  merging.rs  mod.rs  parallel.rs  standard.rs
src/network/: mod.rs
src/network/clustering/: mod.rs
src/pca/: mod.rs
src/pca/sparse/: mod.rs
src/similarity/: mod.rs
src/sparse/: csc.rs  csr.rs  mod.rs
src/statistics/: mod.rs  types.rs
src/statistics/correction/: mod.rs
src/statistics/effect/: mod.rs
src/statistics/inference/: mod.rs  nonparametric.rs  parametric.rs
src/svd/: mod.rs
src/svd/faer/: mod.rs
src/svd/lapack/: mod.rs
src/svd/parallel/: mod.rs
src/utils/: mod.rs
