[package]
name = "single_algebra"
version = "0.8.5"
edition = "2021"
license-file = "LICENSE.md"
description = "A linear algebra convenience library for the single-rust library. Can be used externally as well."
categories = ["science"]
repository = "https://github.com/SingleRust/single-algebra"

[[bench]]
name = "csc_matrix_benchmark"
harness = false

[[bench]]
name = "csr_matrix_benchmark"
harness = false


[features]
smartcore = ["dep:smartcore"]
lapack = ["dep:nalgebra-lapack", "nalgebra-lapack/openblas"]
faer = ["dep:faer", "dep:faer-ext"]
simba = ["dep:simba"]

[dependencies]
anyhow = "1.0.95"
faer = { version = "0.20.1", optional = true }
faer-ext = { version = "0.4.1", features = ["ndarray"], optional = true }
nalgebra = { version = "0.33.2", features = ["serde-serialize"] }
nalgebra-lapack = { version = "0.25.0", default-features = false, optional = true }
nalgebra-sparse = "0.10"
ndarray = { version = "0.16", features = ["rayon"] }
nshare = { version = "0.10.0", features = ["ndarray", "nalgebra"] }
num-traits = "0.2.19"
rayon = "1.10.0"
simba = { version = "0.9.0", optional = true }
smartcore = { version = "0.4", features = ["ndarray-bindings"], optional = true }
rand = "0.9.0"
single-utilities = "0.8.0"
linfa-tsne = {version = "0.7.1"}
linfa = "0.7.1"
single-svdlib = "1.0.6"

[dev-dependencies]
criterion = "0.7.0"
approx = "0.5.1"
