[package]
name = "single_algebra"
version = "0.9.0"
edition = "2021"
license-file = "LICENSE.md"
description = "A linear algebra convenience library for the single-rust library. Can be used externally as well."
categories = ["science"]
repository = "https://github.com/SingleRust/single-algebra"
homepage = "https://singlerust.com"

[[bench]]
name = "csc_matrix_benchmark"
harness = false

[[bench]]
name = "csr_matrix_benchmark"
harness = false


[features]
lapack = ["dep:nalgebra-lapack", "nalgebra-lapack/openblas"]
simba = ["dep:simba"]

[dependencies]
anyhow = "1.0.95"
nalgebra = { version = "0.33.2", features = ["serde-serialize"] }
nalgebra-lapack = { version = "0.25.0", default-features = false, optional = true }
nalgebra-sparse = "0.10"
ndarray = { version = "0.16", features = ["rayon"] }
nshare = { version = "0.10.0", features = ["ndarray", "nalgebra"] }
num-traits = "0.2.19"
rayon = "1.11.0"
simba = { version = "0.9.1", optional = true }
rand = "0.9.2"
single-utilities = "0.8.5"
linfa-tsne = {version = "0.7.1"}
linfa = "0.7.1"
single-svdlib = "1.0.6"
bhtsne = "0.5.4"

[dev-dependencies]
criterion = "0.7.0"
approx = "0.5.1"
